--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -317,7 +317,6 @@
     "    \n",
     "if new_avg_temp > 65 or len(temps_above_value) > 4:\n",
     "    print(\"The cooling system needs to be replaced\")\n",
-    "        \n",
     "else:\n",
     "    False\n",
     "\n",
@@ -353,10 +352,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[76, 80, 81, 80, 83, 90, 79]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperatures_C = [33, 66, 65, 62, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "temps_above_70 = []\n",
+    "for i in temperatures_C:\n",
+    "    if i > 70:\n",
+    "        temps_above_70.append(i)\n",
+    "temps_above_70"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,10 +384,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 33)\n",
+      "(1, 66)\n",
+      "(2, 65)\n",
+      "(3, 62)\n",
+      "(4, 59)\n",
+      "(5, 60)\n",
+      "(6, 62)\n",
+      "(7, 64)\n",
+      "(8, 70)\n",
+      "(9, 76)\n",
+      "(10, 80)\n",
+      "(11, 81)\n",
+      "(12, 80)\n",
+      "(13, 83)\n",
+      "(14, 90)\n",
+      "(15, 79)\n",
+      "(16, 61)\n",
+      "(17, 53)\n",
+      "(18, 50)\n",
+      "(19, 49)\n",
+      "(20, 53)\n",
+      "(21, 48)\n",
+      "(22, 45)\n",
+      "(23, 39)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(temperatures_C)):\n",
+    "    e = i, temperatures_C[i]\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
